# containers-plus

./: changelog.md  containers-plus.cabal  flake.nix  versions
src/ContainersPlus/: Insert.hs  Map.hs  MapUtils.hs  Member.hs
src/ContainersPlus/T/: Insert.hs  MapUtils.hs  MapUtils.sync-conflict-20210613-073255-LJKC4HB.hs
src/T/: ContainersPlus.hs
t/: containers-plus-test.hs
