name:                containers-plus

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.10.9
synopsis:            Additional Utilities for Working with Containers
description:         Additional Utilities for Working with Containers
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    ContainersPlus.Insert, ContainersPlus.T.Insert
                    , ContainersPlus.Map
                    , ContainersPlus.MapUtils, ContainersPlus.T.MapUtils
                    , ContainersPlus.Member
                    , T.ContainersPlus
  other-modules:
  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax


  build-depends:      base, base-unicode-symbols, containers, hashable, lens
                    , mono-traversable, tasty, tasty-hunit, text-printer
                    , unordered-containers

                    , base1                >= 0.0.8.0
                    , more-unicode         >= 0.0.16.0
                    , non-empty-containers >= 1.4.3.1
                    , tasty-plus           >= 1.5.1.0
                    , textual-plus         >= 1.0.2.1

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite containers-plus-test
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  type:               exitcode-stdio-1.0
  hs-source-dirs:     t
  main-is:            containers-plus-test.hs
  build-depends:      base, containers-plus, tasty
  default-extensions: NoImplicitPrelude
                    , UnicodeSyntax
  default-language:   Haskell2010

-------------------------------------------------------------------------------
